tdf#106274 wsd: fix sending wrong UTF-8 string to the client

Client side console error "ws stopped cannot read
utf8 string", the cause it is sending special character '{',
'}',

Conflicts:
	wsd/PrisonerSession.cpp

Change-Id: Ide757ed5206a7674b0004f80d1f28847d770209a
Reviewed-on: https://gerrit.libreoffice.org/34789
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>